read a file and directory name: a file name at point (when ffap is loaded
without ffap-bindings), a file name on the current line in the Dired buffer,
a directory name of adjacent Dired windows for Dired commands that can
operate on several directories (copy, rename, diff).

** M-r is bound to the new `move-to-window-line-top-bottom'
to mirror the new behavior of C-l in Emacs-23.1.


* Changes in Specialized Modes and Packages in Emacs 23.2

** The bookmark menu has a narrowing search via bookmark-bmenu-search.

** LaTeX mode now provides completion via latex-complete and
latex-indent-or-complete.

** lucid.el and levents.el are now declared obsolete.

** pcomplete provides a new command `pcomplete-std-completion' which
is similar to `pcomplete' but using the standard completion UI code.

** .calc.el and .abbrev_defs obey user-emacs-directory.

** Calc graphing commands (`g f' etc.) now work on MS-Windows,
if you have the native Windows port of Gnuplot version 3.8 or later
installed.

** Calendar and diary

*** Fancy diary display is now the default.
If you prefer the simple display, customize `diary-display-function'.

*** The diary's fancy display now enables view-mode.

---
*** The command `calendar-current-date' accepts an optional argument
giving an offset from today.

** Desktop
---
*** The default value for `desktop-buffers-not-to-save' is nil.
This means Desktop will try restoring all buffers, when you restart
your Emacs session.  Also, `desktop-buffers-not-to-save' is only
effective for buffers that have no associated file.  If you want to
exempt buffers that do correspond to files, customize the value of
`desktop-files-not-to-save' instead.

** DocView

*** When `doc-view-continuous-mode' is non-nil, scrolling a line
on the page edge advances to the next/previous page.

** FIXME mail-user-agent change
This probably affects a lot of documentation.

** FIXME gdb-mi

** Grep

A new command `zrgrep' searches recursively in gzipped files.

** Info
