@@ -1,3 +1,13 @@
+2009-11-29  Juri Linkov  <juri@jurta.org>
+
+	Add defcustom to define the cycling order of `recenter-top-bottom'.
+	(Bug#4981)
+
+	* window.el (recenter-last-op): Doc fix.
+	(recenter-positions): New defcustom.
+	(recenter-top-bottom): Rewrite to use `recenter-positions'.
+	(move-to-window-line-top-bottom): Rewrite to use `recenter-positions'.
+
 2009-11-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Improve integration of Tramp and ange-ftp in eshell.
